--- a/server/api/.gitignore
+++ b/server/api/.gitignore
@@ -10,6 +10,10 @@ pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+combined.log*
+exceptional.log*
+error.log*
+rejected.log*
 
 # OS
 .DS_Store
