--- a/server/sdk/package.json
+++ b/server/sdk/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@types/node": "^18.16.3",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "typescript": "~4.7.4"
   }
 }
