--- a/server/account/package.json
+++ b/server/account/package.json
@@ -27,11 +27,14 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/microservices": "^9.4.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.1.0",
     "directory-tree": "^3.5.1",
     "nest-winston": "^1.9.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.8.0",
+    "typeorm": "^0.3.16",
     "winston": "^3.8.2"
   },
   "devDependencies": {
